--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "react-redux",
+  "name": "stories-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-redux": "^6.0.0",
+    "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
